--- a/index_1.html
+++ b/index_1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img class="top-logo" src="./src/sample.png" alt="LOGO">
+        <img class="top-logo" src="./src/sample.png" alt="LOGO" onerror="this.style.visibility = 'hidden'">
         <p class="top-txt">[Login to your account]</p>
         <form onsubmit="return handleSubmit(this);">
             <input type="email" name="email" class="input-email" placeholder="Email*">
@@ -21,9 +21,9 @@
             <button type="submit" class="btn-submit">Login</button>
         </form>
         <p>Issues with login <span><a href=""> contact us.</a></span></p>
-        <div class="login-footer">
+        <div class="login-footer" id="loginFooter">
             <p>Powered By</p>
-            <img src="./src/sample.png" alt="LOGO">
+            <img src="./src/sample.png" alt="LOGO" onerror="return hideFooter();">
         </div>
     </div>
 
